Use latest dependencies and Java 11
Upgrade to Java 11 and use the latest LWJGL OSGi bundles. Upgrade
all other dependencies.